--- a/index.html
+++ b/index.html
@@ -3,37 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Aspect Ratio Calculator</title>
+    <title>Password Generator</title>
 </head>
 
 <body>
 
-    <div class="container">
-        <h2>
-            <span>Aspect Ratio</span>
-            Calculator
-        </h2>
-        <div class="wrapper-1">
-            <input type="number" id="ratio-width" value="16">
-            <input type="number" id="ratio-height" value="9">
+<div class="container">
+    <h2>Pass Generator</h2>
+
+    <div class="wrapper">
+
+        <!-- Password Output -->
+        <div class="input-box">
+            <input type="text" id="password" disabled>
+            <span class="material-symbols-rounded">copy_all</span>
         </div>
-        <div class="box">
-            <div class="wrapper-2">
-                <label for="width">Width:</label>
-                <input type="number" id="width" value="1280">
+
+        <div class="pass-indicator"></div>
+
+        <!-- Password Length -->
+        <div class="pass-length">
+            <div class="details">
+                <label class="title">Password Length</label>
+                <span id="length-value">15</span>
             </div>
-            <div class="wrapper-3">
-                <label for="height">Height:</label>
-                <input type="number" id="height" value="720">
-            </div>
+            <input type="range" min="1" max="30" value="15" step="1">
         </div>
+
+        <!-- Password Settings -->
+        <div class="pass-settings">
+            <label class="title">Pass Settings</label>
+            <ul class="options">
+                <li class="option">
+                    <input type="checkbox" id="lowercase" checked>
+                    <label for="lowercase">Lowercase (a-z)</label>
+                </li>
+                <li class="option">
+                    <input type="checkbox" id="uppercase">
+                    <label for="uppercase">Uppercase (A-Z)</label>
+                </li>
+                <li class="option">
+                    <input type="checkbox" id="numbers">
+                    <label for="numbers">Numbers (0-9)</label>
+                </li>
+                <li class="option">
+                    <input type="checkbox" id="symbols">
+                    <label for="symbols">Symbols (!-$^+)</label>
+                </li>
+                <li class="option">
+                    <input type="checkbox" id="exc-duplicate">
+                    <label for="exc-duplicate">Exclude Duplicate</label>
+                </li>
+                <li class="option">
+                    <input type="checkbox" id="spaces">
+                    <label for="spaces">Include Spaces</label>
+                </li>
+            </ul>
+        </div>
+
+        <button class="generate-btn">Generate Password</button>
+
     </div>
+</div>
 
-
-
-
-    <script src="index.js"></script>
+<script src="script.js"></script>
 </body>
-
 </html>
